# airflow

./: .dockerignore  .env  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: actions.yml  ci.yml  github-actions.yml
plugins/: telegram.py  telegram_alert.py
plugins/airflow_custom/: alerts.py  config.py  hooks.py  logging.py  telegram.py  utils.py
