[project]
name = "airflow"
version = "0.1.0"
description = "Apache Airflow"
authors = [
    {name = "LEMA-UFPB",email = "ufpblema@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.14"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
apache-airflow = "3.1.2"
pyspark = "4.0.1"
pyarrow = "^22.0.0"
apache-airflow-providers-postgres = "^6.4.0"
apache-airflow-providers-mongo = "^5.2.2"
apache-airflow-providers-redis = "^4.3.2"
apache-airflow-providers-apache-spark = "^5.3.3"
apache-airflow-providers-cncf-kubernetes = "^10.9.0"
pandas = "^2.3.3"
polars = "^1.35.2"
dask = "^2025.11.0"
scikit-learn = "^1.7.2"
scipy = "^1.16.3"
geopandas = "^1.1.1"
authlib = "^1.6.5"
pydantic = "^2.12.4"
python-dotenv = "^1.2.1"
openpyxl = "^3.1.5"
xlrd = "^2.0.2"
fastparquet = "^2024.11.0"
pyreaddbc = "^1.2.0"
dbfread = "^2.0.7"
py7zr = "^1.0.0"
beautifulsoup4 = "^4.14.2"
lxml = "^6.0.2"
requests = "^2.32.5"
icrawler = "^0.6.10"
pillow = "^12.0.0"
unidecode = "^1.4.0"
nltk = "^3.9.2"
chardet = "^5.2.0"
statsd = "^4.0.1"
pymongo = "^4.15.4"
